--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,11 @@
 @import 'services';
 @import 'contact';
 @import 'aboutus';
+@import 'testimonials';
+@import 'hero';
+@import 'benefits';
+@import 'mission';
+@import 'faq';
 
 /* Global styles */
 body {
