--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -5,22 +5,27 @@
 
   .faq-content {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+    justify-content: center;
+    gap: 4rem;
+    flex-wrap: wrap;
 
     .faq-heading {
-      max-width: 600px; // Adjusted max-width to make the heading span multiple lines
+      flex: 1;
+      text-align: center;
+      max-width: 350px;
+      margin-top: 6rem;
+      margin-right: 10rem;
 
       h3 {
-        font-size: 2rem; // Enlarged the heading
-        line-height: 1.2; // Allow heading to span multiple lines
+        font-size: 2rem; 
+        line-height: 1.2; 
         margin-bottom: 1rem;
       }
     }
 
     .faq-qa {
-      max-width: 600px; // Ensure the Q&A section is centered
+      flex: 1;
+      max-width: 400px; 
 
       .faq-item {
         margin-bottom: 1rem;
@@ -35,7 +40,6 @@
           margin-bottom: 0.5rem;
           border-bottom: 1px solid #ddd;
           padding-bottom: 0.5rem;
-          text-decoration: underline;
 
           &:hover {
             color: #354d40;
@@ -46,8 +50,8 @@
           font-size: 1rem;
           line-height: 1.5;
           padding-left: 1rem;
-          border-left: 2px solid #354d40;
           margin-top: 0.5rem;
+          text-align: left;
         }
       }
     }
