--- a/src/styles/_benefits.scss
+++ b/src/styles/_benefits.scss
@@ -1,38 +1,45 @@
 .benefits {
-    text-align: center;
-    padding: 2rem 1rem;
-  
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-    }
-  
-    .benefit-list {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-  
-      .benefit-item {
-        max-width: 300px;
-        text-align: center;
-  
-        .benefit-icon {
-          font-size: 3rem;
-          margin-bottom: 1rem;
-          color: #354d40;
-        }
-  
-        h3 {
-          font-size: 1.5rem;
-          margin-bottom: 1rem;
-        }
-  
-        p {
-          font-size: 1rem;
-          line-height: 1.5;
-        }
+  text-align: center;
+  padding: 2rem 1rem;
+
+  h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .benefit-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+
+    .benefit-item {
+      max-width: 300px;
+      text-align: center;
+
+      .benefit-divider {
+        margin-bottom: 1rem;
+        border: none;
+        height: 1px;
+        background-color: #354d40;
+        opacity: 20%;
+      }
+
+      .benefit-icon {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+        color: #354d40;
+      }
+
+      h3 {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+
+      p {
+        font-size: 1rem;
+        line-height: 1.5;
       }
     }
   }
-  
+}
