--- a/src/styles/_aboutus.scss
+++ b/src/styles/_aboutus.scss
@@ -1,33 +1,56 @@
-.about {
-    padding: 2rem;
-  
-    h2 {
-      color: #333;
-    }
-  
-    p {
-      color: #555;
-      margin-bottom: 1rem;
-    }
-  
-    h3 {
-      color: #333;
-      margin-top: 2rem;
-    }
-  
-    ul {
-      list-style-type: disc;
-      padding-left: 1.5rem;
-      margin-bottom: 1rem;
-  
-      li {
-        margin-bottom: 0.5rem;
-        color: #555;
-  
-        strong {
-          color: #333;
+.about-us {
+  padding: 5rem 2rem;
+  text-align: center;
+
+  h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+  }
+
+  .subheading {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .about-section {
+    .about-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 2rem;
+
+      .about-content {
+        flex: 1;
+        padding: 1rem 10rem;
+        text-align: justify;
+
+        h3 {
+          font-size: 2rem;
+          margin-bottom: 1rem;
+        }
+
+        p {
+          font-size: 1.1rem;
+          line-height: 1.6;
+          margin: 0;
+        }
+      }
+
+      .about-image {
+        flex: 1;
+        padding: 1rem;
+
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 0.5rem;
         }
       }
     }
+
+    .reverse {
+      flex-direction: row-reverse;
+    }
   }
-  
+}
