--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,80 +1,69 @@
-.hero {
+// home-banner.component.scss
+
+.s_banner {
+  .container-fluid {
+    .row {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: repeat(20, 1fr);
+
+      .o_grid_item {
+        &.col-lg-10 {
+          grid-area: 8 / 2 / 14 / 12;
+          z-index: 3;
+          h1 {
+            text-align: center;
+          }
+        }
+        &.col-lg-5 {
+          grid-area: 1 / 1 / 16 / 6;
+          z-index: 2;
+        }
+        &.col-lg-4 {
+          grid-area: 8 / 9 / 21 / 13;
+          z-index: 2;
+        }
+      }
+    }
+  }
+}
+
+.s_text_block {
+  padding-top: 112px;
+  padding-bottom: 40px;
+  .container {
+    .row {
+      .col-lg-10 {
+        &.offset-lg-2 {
+          margin-left: 16.6667%;
+        }
+      }
+      .col-lg-4 {
+        &.offset-lg-2 {
+          margin-left: 16.6667%;
+        }
+        &.offset-lg-1 {
+          margin-left: 8.3333%;
+        }
+      }
+    }
+  }
+}
+
+.s_striped {
   position: relative;
-  text-align: center;
-  height: 150vh; // Set height to full viewport height
-  background-color: #eef0f2;
-
-  .hero-content {
-    position: relative;
-    z-index: 1;
-    padding-top: 2rem;
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1.2rem;
-    }
+  padding-top: 56px;
+  padding-bottom: 0;
+  .o_we_shape {
+    background-position: 50% 100%;
   }
-
-  .mission-content {
-    position: relative;
-    z-index: 1;
-    margin-top: 4rem; // Adjust the margin as needed
-
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    .mission-paragraphs {
-      display: flex;
-      justify-content: space-between;
-      gap: 2rem; // Space between the paragraphs
-
-      p {
-        flex: 1;
-        font-size: 1.2rem;
-        line-height: 1.5;
-      }
-    }
-  }
-
-  .hero-images {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    pointer-events: none; // Ensures images are not interactable
-
-    .hero-image {
-      position: absolute;
-
-      &.image1 {
-        top: 0;
-        left: 0;
-        width: auto;
-        height: auto;
-      }
-
-      &.image2 {
-        top: 50%;
-        right: 0;
-        width: auto;
-        height: auto;
-        transform: translateY(-50%);
-      }
-
-      &.image3 {
-        bottom: -100px; // Adjusted bottom value to ensure image fits
-        left: 30%;
-        width: auto;
-        height: auto;
-        transform: translateX(-50%);
+  .container {
+    .row {
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: repeat(14, 1fr);
+      .col-lg-8 {
+        grid-area: 3 / 1 / 15 / 9;
       }
     }
   }
