--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -1,18 +1,98 @@
 .services {
-    padding: 2rem;
-  
-    h2 {
-      color: #333;
-    }
-  
-    ul {
-      list-style: none;
-      padding: 0;
-  
-      li {
-        color: #555;
-        margin: 0.5rem 0;
+  padding: 2rem;
+  text-align: center;
+
+  h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .price-packages {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+
+    .package {
+      border: 1px solid #ddd;
+      padding: 1rem;
+      border-radius: 0.5rem;
+      position: relative;
+      width: 300px;
+
+      .offer-notification {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #ffcc00;
+        color: #000;
+        padding: 0.5rem;
+        font-weight: bold;
+        border-radius: 0.5rem 0 0 0.5rem;
+      }
+
+      h3 {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+
+      p {
+        font-size: 1rem;
       }
     }
+
+    .first-time {
+      background-color: #f0f8ff;
+    }
+
+    .regular {
+      background-color: #fff;
+    }
   }
-  
+
+  .estimation-calculator {
+    margin-top: 3rem;
+
+    h3 {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+    }
+
+    .form-group {
+      margin-bottom: 1.5rem;
+
+      label {
+        display: block;
+        margin-bottom: 0.5rem;
+        font-weight: bold;
+      }
+
+      select {
+        width: 100%;
+        padding: 0.5rem;
+        border: 1px solid #ddd;
+        border-radius: 0.5rem;
+      }
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      background-color: #354d40;
+      color: #fff;
+      border: none;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: #aad2ba;
+      }
+    }
+
+    .estimated-time {
+      margin-top: 2rem;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+  }
+}
