--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,70 +1,57 @@
-// home-banner.component.scss
-
-.s_banner {
-  .container-fluid {
-    .row {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: repeat(20, 1fr);
-
-      .o_grid_item {
-        &.col-lg-10 {
-          grid-area: 8 / 2 / 14 / 12;
-          z-index: 3;
-          h1 {
-            text-align: center;
-          }
-        }
-        &.col-lg-5 {
-          grid-area: 1 / 1 / 16 / 6;
-          z-index: 2;
-        }
-        &.col-lg-4 {
-          grid-area: 8 / 9 / 21 / 13;
-          z-index: 2;
-        }
-      }
-    }
-  }
-}
-
-.s_text_block {
-  padding-top: 112px;
-  padding-bottom: 40px;
-  .container {
-    .row {
-      .col-lg-10 {
-        &.offset-lg-2 {
-          margin-left: 16.6667%;
-        }
-      }
-      .col-lg-4 {
-        &.offset-lg-2 {
-          margin-left: 16.6667%;
-        }
-        &.offset-lg-1 {
-          margin-left: 8.3333%;
-        }
-      }
-    }
-  }
-}
-
-.s_striped {
+.hero {
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
   position: relative;
-  padding-top: 56px;
-  padding-bottom: 0;
-  .o_we_shape {
-    background-position: 50% 100%;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); // Dark overlay for better text visibility
+    z-index: 1;
   }
-  .container {
-    .row {
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(14, 1fr);
-      .col-lg-8 {
-        grid-area: 3 / 1 / 15 / 9;
+
+  .hero-content {
+    position: relative;
+    z-index: 2;
+
+    h1 {
+      font-size: 4rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+
+      .changing-word {
+        color: #b3d4c6; // Color for the changing word
+        animation: bounceIn 3.5s ease-in-out infinite;
       }
     }
+  }
+}
+
+@keyframes bounceIn {
+  0%, 10% {
+    opacity: 0;
+    transform: translateY(-30px); // Start above
+  }
+  30%, 50% {
+    opacity: 1;
+    transform: translateY(0); // Bounce in
+  }
+  80%, 100% {
+    opacity: 1;
+    transform: translateY(0); // Settle in place
   }
 }
