--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -4,8 +4,7 @@
   position: relative;
   background-size: cover;
   background-position: center;
-  background-image: url('../assets/subheadingBackground.jpg'); 
-  background-attachment: scroll; 
+  background-image: url('../assets/subheadingBackground.jpg');
 
   .services-heading {
     width: 100%;
@@ -22,31 +21,29 @@
   }
 
   .content-layer {
-    background-color: #f9f9f9; 
+    background-color: #f9f9f9;
     padding: 5rem 2rem;
 
-    .price-packages {
+    .estimation-section {
       display: flex;
       justify-content: center;
-      gap: 2rem;
+      align-items: stretch;
+      margin-bottom: 2rem;
+      width: 50%;
+      margin: 0 auto;
+      background-color: #fff;
 
       .package {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         border: 1px solid #ddd;
         padding: 1rem;
-        border-radius: 0.5rem;
-        position: relative;
-        width: 300px;
-
-        .offer-notification {
-          position: absolute;
-          top: 0;
-          left: 0;
-          background-color: #ffcc00;
-          color: #000;
-          padding: 0.5rem;
-          font-weight: bold;
-          border-radius: 0.5rem 0 0 0.5rem;
-        }
+        border-radius: 0.5rem 0 0 0.5rem;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../assets/priceBackground.jpg');
 
         h3 {
           font-size: 1.5rem;
@@ -58,60 +55,157 @@
         }
       }
 
-      .first-time {
-        background-color: #f0f8ff;
-      }
-
-      .regular {
+      .estimation-form {
+        flex: 1;
         background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 0 1rem 1rem 0;
+        padding: 1rem;
+
+        .form-group {
+          margin-bottom: 1rem;
+
+          label {
+            display: block;
+            margin-bottom: 0.5rem;
+          }
+
+          select {
+            width: 100%;
+            padding: 0.5rem;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+          }
+        }
+
+        button {
+          padding: 0.5rem 2rem;
+          border: none;
+          border-radius: 5px;
+          background-color: #354d40;
+          color: #fff;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #aad2ba;
+          }
+        }
+
+        .estimated-time {
+          margin-top: 1rem;
+          font-weight: bold;
+        }
       }
     }
 
-    .estimation-calculator {
-      background-color: #fff;
-      border: 1px solid #ddd;
+    .offer-section {
+      text-align: center;
+      margin: 5rem 0;
+      position: relative;
+
+      .offer-warning {
+        font-size: 1.2rem;
+        color: #e74c3c;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: rotate(-45deg);
+        transform-origin: left top;
+        background-color: #fff;
+        padding: 0.5rem;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+      }
+
+      .offer-caption {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
+
+      .packages {
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+
+        .package {
+          border: 1px solid #ddd;
+          padding: 1rem;
+          border-radius: 0.5rem;
+          position: relative;
+          width: 300px;
+
+          .offer-notification {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #e74c3c; // Hot color for the notification
+            color: #fff;
+            padding: 0.5rem;
+            font-weight: bold;
+            border-radius: 0.5rem 0 0 0.5rem;
+          }
+
+          h3 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+          }
+
+          p {
+            font-size: 1rem;
+          }
+
+          &.first-time {
+            background-color: #f0f8ff;
+          }
+        }
+      }
+    }
+
+    .service-include {
+      background-color: #f9f9f9;
       padding: 2rem;
       border-radius: 10px;
-      text-align: center;
-      max-width: 500px;
-      margin: 5rem auto;
+      max-width: 800px;
+      margin: 2rem auto;
 
       h3 {
-        margin-bottom: 1rem;
+        text-align: center;
+        margin-bottom: 2rem;
       }
 
-      .form-group {
-        margin-bottom: 1rem;
+      .service-list {
+        .service-item {
+          border-bottom: 1px solid #ddd;
+          padding: 1rem 0;
 
-        label {
-          display: block;
-          margin-bottom: 0.5rem;
+          &:last-child {
+            border-bottom: none;
+          }
+
+          .service-question {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+
+            h4 {
+              margin: 0;
+            }
+
+            svg {
+              margin-left: 1rem;
+            }
+          }
+
+          .service-answer {
+            margin-top: 1rem;
+            text-align: left;
+            
+            p {
+              margin: 0;
+              white-space: pre-line;
+            }
+          }
         }
-
-        select {
-          width: 100%;
-          padding: 0.5rem;
-          border-radius: 5px;
-          border: 1px solid #ddd;
-        }
-      }
-
-      button {
-        padding: 0.5rem 2rem;
-        border: none;
-        border-radius: 5px;
-        background-color: #354d40;
-        color: #fff;
-        cursor: pointer;
-
-        &:hover {
-          background-color: #aad2ba;
-        }
-      }
-
-      .estimated-time {
-        margin-top: 1rem;
-        font-weight: bold;
       }
     }
   }
