--- a/src/styles/_aboutus.scss
+++ b/src/styles/_aboutus.scss
@@ -1,56 +1,80 @@
 .about-us {
-  padding: 5rem 2rem;
+  padding: 0;
   text-align: center;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-image: url('../assets/subheaderBackground.png');
 
-  h2 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
+  .about-heading {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 2rem;
+    box-sizing: border-box;
+
+    h2 {
+      margin: 0;
+      font-size: 2.5rem;
+      text-align: left;
+    }
   }
 
-  .subheading {
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
-  }
+  .content-layer {
+    background-color: #f9f9f9;
+    padding: 2rem;
+    min-height: 100vh; 
 
-  .about-section {
-    .about-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 2rem;
-
-      .about-content {
-        flex: 1;
-        padding: 1rem 10rem;
-        text-align: justify;
-
-        h3 {
-          font-size: 2rem;
-          margin-bottom: 1rem;
-        }
-
-        p {
-          font-size: 1.1rem;
-          line-height: 1.6;
-          margin: 0;
-        }
-      }
-
-      .about-image {
-        flex: 1;
-        padding: 1rem;
-
-        img {
-          width: 100%;
-          height: auto;
-          border-radius: 0.5rem;
-        }
-      }
+    .quote {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
     }
 
-    .reverse {
-      flex-direction: row-reverse;
+    .subheading {
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+    }
+
+    .about-section {
+      .about-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 2rem;
+
+        .about-content {
+          flex: 1;
+          padding: 1rem 10rem;
+          text-align: justify;
+
+          h3 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+          }
+
+          p {
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin: 0;
+          }
+        }
+
+        .about-image {
+          flex: 1;
+          padding: 1rem;
+
+          img {
+            width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+          }
+        }
+      }
+
+      .reverse {
+        flex-direction: row-reverse;
+      }
     }
   }
 }
