--- a/src/styles/_order.scss
+++ b/src/styles/_order.scss
@@ -3,7 +3,7 @@
 .order-section {
     padding: 2rem;
     text-align: center;
-    background-color: #f9f9f9;
+    margin-bottom: 5rem;
   
     h2 {
       font-size: 2.5rem;
@@ -16,7 +16,7 @@
       align-items: center;
       max-width: 60%;
       margin: 0 auto;
-      background-color: #f0f1f7;
+      background-color: #f5f5f5;
       border-radius: 10%;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   
@@ -32,7 +32,7 @@
       .book-form {
         flex: 1;
         padding: 2rem;
-        background-color: #f0f1f7;
+        background-color: #f5f5f5;
         border-radius: 0 10% 10% 0;
   
         .form-intro {
