--- a/src/styles/_serviceInclude.scss
+++ b/src/styles/_serviceInclude.scss
@@ -7,7 +7,9 @@
   
     h3 {
       text-align: center;
-      margin-bottom: 2rem;
+      font-size: 3rem;
+      font-weight: 900;
+      margin-bottom: 4rem;
     }
   
     .service-list {
@@ -27,10 +29,16 @@
   
           h4 {
             margin: 0;
+            font-size: 1.5rem;
+            font-weight: 550;
           }
   
           svg {
             margin-left: 1rem;
+          }
+          
+          &:hover {
+            color: #354d40;
           }
         }
   
@@ -40,7 +48,9 @@
           
           p {
             margin: 0;
+            font-size: 20px;
             white-space: pre-line;
+            line-height: 1.8;
           }
         }
       }
