--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,89 +1,129 @@
-.contact-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 5rem;
+.contact-us {
+  padding: 0;
+  text-align: center;
   position: relative;
+  background-size: cover;
+  background-position: center;
+  background-image: url('../assets/subheaderBackground.png');
 
-  .contact-form-section, .contact-info-section {
-    width: 48%; // Adjust width to split in half
+  .contact-heading {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 2rem;
+    box-sizing: border-box;
 
-    h2, h3 {
-      color: #333;
-    }
-
-    p {
-      color: #555;
-      margin-bottom: 1rem;
-    }
-
-    .form-group {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 1rem;
-
-      label {
-        margin-bottom: 0.5rem;
-        color: #333;
-      }
-
-      input, textarea {
-        padding: 0.5rem; // Smaller padding
-        border: 1px solid #ddd;
-        border-radius: 8px; // Rounded corners
-        font-size: 1rem;
-      }
-
-      textarea {
-        resize: vertical;
-        height: 100px;
-      }
-    }
-
-    button {
-      padding: 0.75rem 1.5rem;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      border-radius: 8px; // Rounded corners
-      cursor: pointer;
-      font-size: 1rem;
-
-      &:hover {
-        background-color: #0056b3;
-      }
-    }
-
-    a {
-      color: #25D366; // WhatsApp green color
-      margin-left: 10px; // Add some space between the phone number and icon
-      text-decoration: none;
-
-      &:hover {
-        color: #128C7E; // Darker WhatsApp green color
-      }
+    h2 {
+      margin: 0;
+      font-size: 2.5rem;
+      text-align: left;
     }
   }
 
-  .divider {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 1px;
-    background-color: #ddd;
-    
-    span {
+  .content-layer {
+    background-color: #f9f9f9;
+    padding: 5rem 2rem;
+    min-height: 100vh; 
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+
+    .contact-form-section, .contact-info-section {
+      width: 48%;
+      margin: 5rem 0 2rem 0;
+
+      h2 {
+        color: #333;
+        font-size: 2rem;
+        font-weight: 900;
+        margin-bottom: 2rem;
+      }
+
+      p {
+        color: #555;
+        margin-bottom: 1rem;
+        font-size: 1.2rem;
+      }
+
+      .form-group {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+
+        label {
+          margin-bottom: 0.5rem;
+          color: #333;
+        }
+
+        input, textarea {
+          padding: 0.5rem; 
+          border: 1px solid #ddd;
+          border-radius: 8px; 
+          font-size: 1rem;
+          width: 70%; 
+          margin: 0 auto; 
+        }
+
+        select {
+          padding: 0.5rem; 
+          border: 1px solid #ddd;
+          border-radius: 8px; 
+          font-size: 1rem;
+          width: 72%; 
+          margin: 0 auto; 
+        }
+
+        textarea {
+          resize: vertical;
+          height: 100px;
+        }
+      }
+
+      button {
+        font-family: 'Nunito Sans', sans-serif;
+        padding: 0.75rem 1.5rem;
+        background-color: #354d40;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 1rem;
+
+        &:hover {
+          background-color: #aad2ba;
+          color: #112A46;
+        }
+      }
+    }
+
+    .contact-info-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: left;
+    }
+
+    .divider {
       position: absolute;
-      top: 50%;
-      left: -0.8rem;
-      transform: translateY(-50%);
-      background-color: #fff;
-      padding: 0 0.5rem;
-      font-weight: bold;
-      color: #333;
-      display: inline-block;
-      line-height: 1.5;
+      top: 2rem;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 1px;
+      background-color: #ddd;
+
+      span {
+        position: absolute;
+        top: 50%;
+        left: -0.8rem;
+        transform: translateY(-50%);
+        background-color: #fff;
+        padding: 0 0.5rem;
+        font-weight: bold;
+        color: #333;
+        display: inline-block;
+        line-height: 1.5;
+      }
     }
   }
 }
