--- a/src/styles/_testimonials.scss
+++ b/src/styles/_testimonials.scss
@@ -17,10 +17,16 @@
       max-width: 600px;
       margin: 0 1rem;
 
-      .testimonial-feedback-image {
-        width: 100%;
-        height: auto;
-        margin-bottom: 1rem;
+      .review-text {
+        font-size: 1.2rem;
+        font-style: italic;
+        margin-bottom: 0.5rem;
+      }
+
+      .customer-name {
+        font-size: 1rem;
+        font-weight: bold;
+        color: #555;
       }
     }
 
