--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -22,7 +22,7 @@
 
   .content-layer {
     background-color: #f9f9f9;
-    padding: 5rem 2rem;
+    padding: 5rem 0;
     min-height: 100vh;
 
     .estimation-section {
@@ -182,6 +182,62 @@
           &.first-time {
             background-color: #f0f8ff;
           }
+        }
+      }
+    }
+
+    .interesting-fact-section {
+      display: flex;
+      background-color: #f5f5f5;
+      padding: 0 2rem;
+      margin-top: 2rem;
+      border-radius: 0.5rem;
+      text-align: left;
+
+      .fact-content {
+        flex: 1;
+        padding-right: 1rem;
+
+        .fact-caption {
+          font-size: 3rem;
+          font-weight: 900;
+          margin-bottom: 1rem;
+        }
+
+        .fact-highlight {
+          font-size: 1.2rem;
+          font-weight: bold;
+          color: #354d40;
+          margin-bottom: 1rem;
+        }
+
+        p {
+          font-size: 1.1rem;
+          margin-bottom: 0.5rem;
+        }
+
+        ul {
+          list-style-type: disc;
+          padding-left: 2rem;
+
+          li {
+            font-size: 1.1rem;
+            margin-bottom: 0.5rem;
+          }
+        }
+      }
+
+      .fact-image {
+        flex: 1;
+        padding-left: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          max-width: 100%;
+          height: auto;
+          border-radius: 0.5rem;
         }
       }
     }
