--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -30,13 +30,13 @@
       justify-content: center;
       align-items: stretch;
       margin-bottom: 2rem;
-      width: 50%;
+      width: 60%; 
       margin: 0 auto;
       background-color: #fff;
       height: calc(100% + 4rem);
 
       .package {
-        flex: 1;
+        flex: 1.5;
         padding: 4rem;
         display: flex;
         flex-direction: column;
@@ -48,19 +48,18 @@
         background-repeat: no-repeat;
         background-image: url('../assets/priceBackground.png');
 
-        h3 {
-          font-size: 2rem;
-          margin-bottom: 1rem;
-          font-weight: 900;
+        p {
+          font-size: 1.5rem;
+          font-weight: 800;
           color: #000;
           text-shadow: 2px 2px 0 #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff;
         }
 
-        p {
-          font-size: 1.5rem;
-          font-weight: 900;
-          color: #000;
-          text-shadow: 2px 2px 0 #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff;
+        .package-item {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          text-align: left;
         }
       }
 
