--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -48,24 +48,88 @@
       display: flex;
       gap: 5rem;
       justify-content: center;
+
+      .hero-button {
+        font-family: 'Nunito Sans', sans-serif;
+        padding: 0.8rem 1.5rem;
+        font-size: 1.5rem;
+        font-weight: 900;
+        border: none;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        text-decoration: none;
+        background-color: #354d40;
+        color: #fff;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+          background-color: #aad2ba;
+          color: #112A46;
+        }
+      }
     }
 
-    .hero-button {
-      font-family: 'Nunito Sans', sans-serif;
-      padding: 0.8rem 1.5rem;
-      font-size: 1.5rem;
-      font-weight:900;
-      border: none;
-      border-radius: 0.5rem;
-      cursor: pointer;
-      text-decoration: none;
-      background-color: #354d40;
-      color: #fff;
-      transition: background-color 0.3s ease;
+    @media (max-width: 1024px) {
+      h1 {
+        font-size: 3rem;
+      }
 
-      &:hover {
-        background-color: #aad2ba;
-        color: #112A46;
+      h2 {
+        font-size: 2rem;
+      }
+
+      .hero-buttons {
+        gap: 2rem;
+
+        .hero-button {
+          font-size: 1.3rem;
+          padding: 0.7rem 1.3rem;
+        }
+      }
+    }
+
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+
+      h2 {
+        font-size: 1.75rem;
+      }
+
+      .hero-buttons {
+        flex-direction: column;
+        gap: 1rem;
+
+        .hero-button {
+          font-size: 1.3rem;
+          padding: 0.7rem 1.3rem;
+          width: auto;
+        }
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      .hero-buttons {
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 5rem;
+
+        .hero-button {
+          font-size: 1.3rem;
+          padding: 0.7rem 1.3rem;
+          width: auto; 
+          max-width: 200px; 
+          margin: 0 auto;
+        }
       }
     }
   }
