--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -126,4 +126,39 @@
       }
     }
   }
+
+  @media (max-width: 1024px) {
+    .content-layer {
+      flex-direction: column;
+      align-items: center;
+
+      .contact-form-section, .contact-info-section {
+        width: 100%;
+        margin: 2rem 0;
+        padding: 0 1rem;
+      }
+
+      .divider {
+        display: none;
+      }
+    }
+  }
+
+  @media (max-height: 1366px) and (min-width: 1024px) {
+    .content-layer {
+      padding: 2rem 2rem; 
+      display: block; 
+      min-height: auto;
+
+      .contact-form-section, .contact-info-section {
+        width: 100%;
+        margin: 2rem 0;
+        padding: 0 1rem;
+      }
+
+      .divider {
+        display: none;
+      }
+    }
+  }
 }
