--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -98,13 +98,14 @@
       }
 
       .hero-buttons {
-        flex-direction: column;
         gap: 1rem;
 
         .hero-button {
           font-size: 1.3rem;
           padding: 0.7rem 1.3rem;
           width: auto;
+          max-width: 200px; 
+          margin: 0 auto;
         }
       }
     }
