--- a/src/styles/_order.scss
+++ b/src/styles/_order.scss
@@ -1,96 +1,196 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
 
 .order-section {
-    padding: 2rem;
-    text-align: center;
-    margin-bottom: 5rem;
-  
-    h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1.5rem;
-    }
-  
-    .book-container {
+  padding: 2rem;
+  text-align: center;
+  margin-bottom: 5rem;
+
+  h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .book-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    max-width: 60%;
+    margin: 0 auto;
+    background-color: #f5f5f5;
+    border-radius: 10%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    .book-image {
       display: flex;
-      justify-content: center;
       align-items: center;
-      max-width: 60%;
-      margin: 0 auto;
+      justify-content: center;
+      height: 100%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 10% 0 0 10%;
+        object-fit: cover;
+      }
+    }
+
+    .book-form {
+      flex: 1;
+      padding: 2rem;
       background-color: #f5f5f5;
-      border-radius: 10%;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  
-      .book-image {
-        flex: 1;
-        img {
+      border-radius: 0 10% 10% 0;
+
+      .form-intro {
+        font-family: 'Nunito Sans', sans-serif;
+        margin-bottom: 2rem;
+        font-size: 2rem;
+        font-weight: 900;
+        color: #112A46;
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .form-group {
+          margin-bottom: 1rem;
           width: 100%;
-          height: auto;
-          border-radius: 10% 0 0 10%;
+          max-width: 371.5px;
+
+          input{
+            width: 93%;
+            height: 70%;
+            padding: 14px;
+            border: 1px solid #ddd;
+            border-radius: 1rem;
+            font-size: 1rem;
+          }
+
+          select {
+            width: 100%;
+            height: 70%;
+            padding: 14px;
+            border: 1px solid #ddd;
+            border-radius: 1rem;
+            font-size: 1rem;
+          }
+
+          input::placeholder {
+            color: #888;
+          }
+        }
+
+        button {
+          font-family: 'Nunito Sans', sans-serif;
+          padding: 0.8rem 1.5rem;
+          font-size: 1.5rem;
+          font-weight: 900;
+          border: none;
+          border-radius: 0.5rem;
+          cursor: pointer;
+          background-color: #354d40;
+          color: #fff;
+          transition: background-color 0.3s ease;
+
+          &:hover {
+            background-color: #aad2ba;
+            color: #112A46;
+          }
         }
       }
-  
-      .book-form {
-        flex: 1;
-        padding: 2rem;
-        background-color: #f5f5f5;
-        border-radius: 0 10% 10% 0;
-  
-        .form-intro {
-          font-family: 'Nunito Sans', sans-serif;
-          margin-bottom: 2rem;
-          font-size: 2rem;
-          font-weight: 900;
-          color: #112A46;
-        }
-  
-        form {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-  
-          .form-group {
-            margin-bottom: 1rem;
-            width: 100%;
-            max-width: 371.5px;
-  
-            input, select {
-              width: 100%;
-              height: 70%;
-              padding: 14px; 
-              border: 1px solid #ddd;
-              border-radius: 1rem; 
-              font-size: 1rem;
-            }
 
-            input::placeholder {
-              color: #888;
-            }
+      .form-status {
+        margin-top: 1rem;
+        color: green;
+      }
+    }
+  }
+
+  @media (max-width: 1366px) {
+      .book-form {
+
+        .form-group {
+          input {
+            max-width: 300px;
           }
-  
-          button {
-            font-family: 'Nunito Sans', sans-serif;
-            padding: 0.8rem 1.5rem;
-            font-size: 1.5rem;
-            font-weight: 900;
-            border: none;
-            border-radius: 0.5rem;
-            cursor: pointer;
-            background-color: #354d40;
-            color: #fff;
-            transition: background-color 0.3s ease;
-  
-            &:hover {
-              background-color: #aad2ba;
-              color: #112A46;
-            }
+          select{
+            max-width: 330px;
           }
         }
-  
-        .form-status {
-          margin-top: 1rem;
-          color: green;
+      }
+    }
+
+  @media (max-width: 1024px) {
+    .book-container {
+      display: flex;
+      flex-direction: column;
+      max-width: 60%;
+      box-shadow: none;
+      background-color: transparent;
+
+      .book-image {
+        display: none;
+      }
+
+      .book-form {
+        border-radius: 10%;
+        padding: 1rem;
+
+        .form-group {
+          input {
+            max-width: 340px;
+          }
+          select{
+            max-width: 400px;
+          }
         }
       }
     }
   }
-  
+
+  @media (max-width: 768px) {
+    .book-form {
+      .form-group {
+        input, select {
+          padding: 10px;
+          font-size: 0.9rem;
+          max-width: 300px;
+        }
+      }
+
+      button {
+        font-size: 1.2rem;
+        padding: 0.6rem 1.2rem;
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    .book-container{
+      
+      .book-form {
+        font-size: 1rem;
+        border-radius: 0%;
+        font-weight: 500;
+        .form-group {
+          input {
+            padding: 8px;
+            font-size: 0.8rem;
+            max-width: 190px;
+          }
+
+          select {
+            padding: 8px;
+            font-size: 0.8rem;
+            max-width: 220px;
+          }
+        }
+
+        button {
+          font-size: 1rem;
+          padding: 0.5rem 1rem;
+        }
+      }
+    }
+  }
+}
