--- a/src/styles/_serviceInclude.scss
+++ b/src/styles/_serviceInclude.scss
@@ -1,59 +1,71 @@
 .service-include {
-    background-color: #f9f9f9;
-    padding: 2rem;
-    border-radius: 10px;
-    max-width: 800px;
-    margin: 2rem auto;
-  
-    h3 {
-      text-align: center;
-      font-size: 3rem;
-      font-weight: 900;
-      margin-bottom: 4rem;
-    }
-  
-    .service-list {
-      .service-item {
-        border-bottom: 1px solid #ddd;
-        padding: 1rem 0;
-  
-        &:last-child {
-          border-bottom: none;
+  background-color: #f9f9f9;
+  padding: 2rem;
+  border-radius: 10px;
+  max-width: 800px;
+  margin: 2rem auto;
+
+  h3 {
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 900;
+    margin-bottom: 4rem;
+  }
+
+  .service-list {
+    .service-item {
+      border-bottom: 1px solid #ddd;
+      padding: 1rem 0;
+
+      &:last-child {
+        border-bottom: none;
+      }
+
+      .service-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+
+        h4 {
+          margin: 0;
+          font-size: 1.5rem;
+          font-weight: 550;
         }
-  
-        .service-question {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          cursor: pointer;
-  
-          h4 {
-            margin: 0;
-            font-size: 1.5rem;
-            font-weight: 550;
-          }
-  
-          svg {
-            margin-left: 1rem;
-          }
-          
-          &:hover {
-            color: #354d40;
-          }
+
+        svg {
+          margin-left: 1rem;
         }
-  
-        .service-answer {
-          margin-top: 1rem;
-          text-align: left;
-          
-          p {
-            margin: 0;
-            font-size: 20px;
-            white-space: pre-line;
-            line-height: 1.8;
-          }
+        
+        &:hover {
+          color: #354d40;
+        }
+      }
+
+      .service-answer {
+        margin-top: 1rem;
+        text-align: left;
+        
+        p {
+          margin: 0;
+          font-size: 20px;
+          white-space: pre-line;
+          line-height: 1.8;
         }
       }
     }
   }
-  
+
+  @media (max-width: 480px) {
+    .service-question {
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+
+      svg {
+        margin-left: 0;
+        margin-top: 0.5rem;
+      }
+    }
+  }
+}
