--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -241,4 +241,60 @@
       }
     }
   }
+
+  @media (max-width: 1024px) {
+    .content-layer {
+      .estimation-section {
+        flex-direction: column;
+
+        .package,
+        .estimation-form {
+          flex: none;
+          width: 100%;
+          padding: 2rem;
+          border-radius: 0;
+        }
+      }
+
+      .offer-section {
+        .packages {
+          flex-direction: column;
+          align-items: center;
+
+          .package {
+            margin: 1rem 0;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .interesting-fact-section {
+      flex-direction: column;
+
+      .fact-content {
+        width: 70%;
+        margin: 0 auto;
+        text-align: center;
+
+        .fact-caption{
+          font-size: 2rem !important;
+          font-weight: 600 !important;
+        }
+
+        .fact-highlight{
+          font-size: 1rem !important;
+        }
+
+        p, ul, li{
+          font-size: 0.9rem !important;
+        }
+      }
+
+      .fact-image {
+        display: none !important; 
+      }
+    }
+  }
 }
