--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -144,7 +144,7 @@
     }
   }
 
-  @media (max-height: 1366px) and (min-width: 1024px) {
+  @media (max-height: 1366px) and (max-width: 1024px) {
     .content-layer {
       padding: 2rem 2rem; 
       display: block; 
