--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -45,12 +45,12 @@
 
         a {
           text-decoration: none;
-          color: white; // Updated font color
+          color: white;
           font-weight: bold;
           font-size: 25px;
 
           &:hover {
-            color: #aad2ba; // Lighter shade for hover effect
+            color: #aad2ba;
             text-decoration: underline;
           }
         }
@@ -95,11 +95,11 @@
       border: none;
       cursor: pointer;
       font-size: 1.5rem;
-      color: white; // Updated font color
+      color: white;
       padding: 0.5rem 1rem;
 
       &:hover {
-        color: #aad2ba; // Lighter shade for hover effect
+        color: #aad2ba; 
       }
 
       &:focus {
@@ -131,6 +131,85 @@
           }
         }
       }
+    }
+  }
+
+  .hamburger-menu {
+    display: none;
+    position: relative;
+    left: -5%;
+
+    .menu-toggle {
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
+      font-size: 2rem;
+      color: white;
+
+      &:hover {
+        color: #aad2ba; 
+      }
+
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .center-logo {
+      display: none !important;
+    }
+
+    nav {
+      display: none;
+    }
+
+    nav.open {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background-color: #354d40;
+      text-align: center;
+      padding: 1rem 0;
+
+      .nav-left, .nav-right {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .nav-left{
+        position: relative;
+        left: -5%;
+        margin-bottom: 0;
+      }
+
+      .nav-right{
+        position: relative;
+        left: -5%;
+      }
+    }
+
+    .hamburger-menu {
+      display: block;
+    }
+
+    .left-logo {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+    }
+
+    .language-switcher {
+      display: none;
+    }
+
+    .hamburger-menu.open ~ nav,
+    .hamburger-menu.open ~ .language-switcher {
+      display: block;
     }
   }
 }
