--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import 'header';
 @import 'footer';
 @import 'homepage';
-@import 'services';
+@import 'homeServices';
+@import 'movingServices';
 @import 'contact';
 @import 'aboutus';
 @import 'testimonials';
