--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #354d40;
+  background-color: #354d40; 
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -11,7 +11,7 @@
   z-index: 1000;
 
   .left-logo img {
-    height: 70px;
+    height: 70px; 
     margin-right: 1rem;
   }
 
@@ -36,22 +36,59 @@
     .nav-left, .nav-right {
       list-style: none;
       display: flex;
-      gap: 6rem;
+      gap: 6rem; 
       align-items: center;
 
       li {
         display: flex;
         align-items: center;
 
-        a {
-          text-decoration: none;
+        a, span {
+          text-decoration: none; // Remove underline
           color: white;
           font-weight: bold;
           font-size: 25px;
+          cursor: pointer;
 
           &:hover {
             color: #aad2ba;
-            text-decoration: underline;
+            text-decoration: none; // Ensure no underline on hover
+          }
+        }
+
+        &.dropdown {
+          position: relative;
+
+          .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: #354d40;
+            border-radius: 4px;
+            padding: 0.5rem 0;
+            list-style: none;
+            z-index: 1000;
+            width: 200px;
+            
+            li {
+              padding: 0.5rem 1rem;
+
+              a {
+                color: white;
+                text-decoration: none;
+                font-size: 20px;
+
+                &:hover {
+                  color: #aad2ba;
+                  text-decoration: none; // Ensure no underline on hover
+                }
+              }
+            }
+          }
+
+          &:hover .dropdown-menu, &.open .dropdown-menu {
+            display: block;
           }
         }
       }
@@ -87,9 +124,9 @@
   }
 
   .language-switcher {
-    position: absolute;
-    right: 1rem; // Position the language switcher at the far right
-    top: 50%;
+    position: absolute; 
+    right: 1rem; 
+    top: 50%; 
     transform: translateY(-50%);
 
     .dropdown-toggle {
@@ -101,7 +138,7 @@
       padding: 0.5rem 1rem;
 
       &:hover {
-        color: #aad2ba;
+        color: #aad2ba; 
       }
 
       &:focus {
@@ -112,10 +149,9 @@
     .dropdown-menu {
       display: block;
       position: absolute;
-      top: 100%;
-      right: 0;
+      top: 50%;
+      right: 80%;
       background-color: #fff;
-      border: 1px solid #ddd;
       border-radius: 4px;
       padding: 0.5rem 0;
       z-index: 1000;
@@ -130,6 +166,41 @@
 
           &:hover {
             background-color: #f8f9fa;
+            text-decoration: none; // Ensure no underline on hover
+          }
+        }
+      }
+    }
+
+    &.open {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      top: 0;
+      right: 0;
+      width: 100%;
+
+      .dropdown-menu {
+        position: static;
+        top: auto;
+        right: auto;
+        background-color: #fff;
+        border-radius: 4px;
+        padding: 0.5rem 0;
+      }
+
+      li {
+        padding: 0.5rem 1rem;
+        list-style: none;
+
+        a {
+          color: #333;
+          text-decoration: none;
+
+          &:hover {
+            background-color: #f8f9fa;
+            text-decoration: none; // Ensure no underline on hover
           }
         }
       }
@@ -149,7 +220,7 @@
       color: white;
 
       &:hover {
-        color: #aad2ba;
+        color: #aad2ba; 
       }
 
       &:focus {
@@ -221,6 +292,12 @@
       flex-direction: column;
       align-items: center;
       padding: 1rem 0;
+    }
+
+    nav.open .dropdown .dropdown-menu {
+      position: relative;
+      left: -5%;
+      transform: none;
     }
   }
 }
