Done home and moving clean page

--- a/src/styles/_homeServices.scss
+++ b/src/styles/_homeServices.scss
@@ -49,6 +49,59 @@
         background-repeat: no-repeat;
         background-image: url('../assets/homeCleaningBackground.png');
 
+        .package-content {
+          z-index: 2;
+          padding: 2rem;
+          text-align: left;
+          color: #fff;
+
+          .cleaning-price {
+            font-size: 1.5rem;
+            font-weight: 600;
+            position: absolute;
+            top: 2rem;
+          }
+
+          .cleaning-cost {
+            font-size: 3.5rem;
+            font-weight: 900;
+            margin-bottom: 1rem;
+          }
+
+          .hourly-rate {
+            font-size: 3.5rem;
+            font-weight: 900;
+            margin: 1rem 0;
+          }
+
+          .rate-after-tax {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-bottom: 1rem;
+          }
+
+          .divider {
+            margin: 2rem 0;
+            border: none;
+            border-top: 1px solid #fff;
+          }
+
+          .scroll-button {
+            display: inline-block;
+            padding: 0.5rem 2rem;
+            border: none;
+            border-radius: 5px;
+            background-color: #354d40;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+
+            &:hover {
+              background-color: #aad2ba;
+            }
+          }
+        }
+
         &::before {
           content: '';
           position: absolute;
@@ -87,6 +140,19 @@
             color: #ececec; 
           }
         }
+
+        .scroll-button {
+          padding: 0.5rem 2rem;
+          border: none;
+          border-radius: 5px;
+          background-color: #354d40;
+          color: #fff;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #aad2ba;
+          }
+        }
       }
 
       .estimation-form {
@@ -95,6 +161,11 @@
         border: 1px solid #ddd;
         border-radius: 0 1rem 1rem 0;
         padding: 4rem;
+
+        h3{
+          font-size: 2.5rem;
+          font-weight: 900;
+        }
 
         .form-group {
           margin-bottom: 1rem;
@@ -266,6 +337,72 @@
         }
       }
     }
+
+    .order-form-section {
+      text-align: center;
+      padding: 2rem 0;
+    
+      .order-form {
+        max-width: 20%;
+        margin: 0 auto;
+        padding: 2rem;
+        background-color: #fff;
+        border-radius: 0.5rem;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+        h2 {
+          margin-bottom: 1rem;
+          font-size: 2rem;
+          text-align: center;
+          color: #354d40;
+        }
+    
+        .form-group {
+          margin-bottom: 1.5rem;
+    
+          input {
+            width: 100%;
+            padding: 0.5rem;
+            border: 1px solid #ddd;
+            border-radius: 0.25rem;
+            font-size: 1rem;
+            box-sizing: border-box;
+          }
+    
+          &.half-width {
+            display: flex;
+            gap: 1rem;
+    
+            input {
+              flex: 1;
+            }
+          }
+        }
+    
+        button {
+          display: block;
+          width: 100%;
+          padding: 0.75rem;
+          background-color: #354d40;
+          color: #fff;
+          border: none;
+          border-radius: 0.25rem;
+          font-size: 1rem;
+          cursor: pointer;
+          transition: background-color 0.3s ease;
+    
+          &:hover {
+            background-color: #aad2ba;
+          }
+        }
+    
+        .form-status {
+          margin-top: 1rem;
+          color: #354d40;
+          font-size: 1rem;
+        }
+      }
+    }    
   }
 
   @media (max-width: 1024px) {
@@ -295,6 +432,12 @@
           .package {
             margin: 1rem 0;
           }
+        }
+      }
+
+      .order-form-section {
+        .order-form {
+          max-width: 40%;
         }
       }
     }
@@ -327,11 +470,53 @@
         display: none !important; 
       }
     }
+
+    .order-form-section {
+      .order-form {
+        max-width: 60% !important;
+      }
+    }
   }
 
   @media (max-width: 480px) {
     .estimation-section{
       margin: 0 3rem !important;
+
+      .package{
+        .package-content{
+          padding: 1rem !important;
+          .cleaning-price {
+            font-size: 0.9rem !important;
+            font-weight: 300 !important;
+          }
+
+          .cleaning-cost {
+            font-size: 2rem !important;
+            font-weight: 600 !important;
+          }
+
+          .hourly-rate {
+            font-size: 2rem !important;
+            font-weight: 600 !important;
+          }
+
+          .rate-after-tax {
+            font-size: 0.9rem !important;
+            font-weight: 300 !important;
+          }
+
+          .divider {
+            margin: 1rem 0 !important;
+          }
+        }
+      }
+
+      .estimation-form{
+        h3{
+          font-size: 2rem !important;
+          font-weight: 600 !important;
+        }
+      }
     }
 
     .offer-section {
@@ -339,6 +524,12 @@
         .package.first-time {
           width: 75%; 
         }
+      }
+    }
+
+    .order-form-section {
+      .order-form {
+        max-width: 70% !important;
       }
     }
   }
