--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import 'homepage';
 @import 'homeServices';
 @import 'movingServices';
+@import 'officeServices';
 @import 'contact';
 @import 'aboutus';
 @import 'testimonials';
