--- a/src/styles/_movingServices.scss
+++ b/src/styles/_movingServices.scss
@@ -34,6 +34,8 @@
       margin: 0 auto;
       background-color: #fff;
       height: calc(100% + 4rem);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      border-radius: 1rem;
 
       .package {
         position: relative;
@@ -44,7 +46,7 @@
         justify-content: center;
         border: 1px solid #ddd;
         padding: 1rem;
-        border-radius: 0.5rem 0 0 0.5rem;
+        border-radius: 1rem 0 0 1rem;
         background-size: cover;
         background-repeat: no-repeat;
         background-image: url('../assets/movingCleaningBackground.jpg');
@@ -110,6 +112,7 @@
 
             &:hover {
               background-color: #aad2ba;
+              color: #112A46;
             }
           }
         }
@@ -178,6 +181,7 @@
 
           &:hover {
             background-color: #aad2ba;
+            color: #112A46;
           }
         }
 
@@ -200,7 +204,7 @@
       padding: 2rem;
       border-radius: 0.5rem;
       text-align: left;
-      margin-top: 2rem;
+      margin: 8rem 0 2rem 0;
       border-radius: 0.5rem;
 
       .text {
@@ -214,7 +218,7 @@
         }
 
         .paragraph {
-          font-size: 1.25rem;
+          font-size: 1.5rem;
         }
       }
 
@@ -236,6 +240,13 @@
     .order-form-section {
       text-align: center;
       padding: 2rem 0;
+
+      h2 {
+        margin-bottom: 1rem;
+        font-size: 3rem;
+        font-weight: 900;
+        text-align: center;
+      }
     
       .order-form {
         max-width: 20%;
@@ -244,13 +255,6 @@
         background-color: #fff;
         border-radius: 0.5rem;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
-        h2 {
-          margin-bottom: 1rem;
-          font-size: 2rem;
-          text-align: center;
-          color: #354d40;
-        }
     
         .form-group {
           margin-bottom: 1.5rem;
@@ -288,6 +292,7 @@
     
           &:hover {
             background-color: #aad2ba;
+            color: #112A46;
           }
         }
     
@@ -361,7 +366,7 @@
       .package{
         .package-content{
           padding: 1rem !important;
-          
+
           .cleaning-price {
             font-size: 0.9rem !important;
             font-weight: 300 !important;
