--- a/src/styles/_serviceInclude.scss
+++ b/src/styles/_serviceInclude.scss
@@ -57,14 +57,34 @@
   }
 
   @media (max-width: 480px) {
-    .service-question {
-      justify-content: center;
-      flex-direction: column;
-      text-align: center;
 
-      svg {
-        margin-left: 0;
-        margin-top: 0.5rem;
+    h3 {
+      font-size: 2rem;
+      font-weight: 600;
+    }
+
+    .service-list{
+      .service-item {
+        .service-question {
+          justify-content: center;
+          flex-direction: column;
+          text-align: center;
+
+          h4 {
+            font-size: 1.25rem;
+          }
+
+          svg {
+            margin-left: 0;
+            margin-top: 0.5rem;
+          }
+        }
+
+        .service-answer {
+          p {
+            font-size: 1rem;
+          }
+        }
       }
     }
   }
